@@ -72,6 +72,40 @@ name|StringTokenizer
 import|;
 end_import
 
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|regex
+operator|.
+name|Matcher
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|regex
+operator|.
+name|Pattern
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
 begin_comment
 comment|/**  *  * This class execute commands and captures the output  */
 end_comment
@@ -102,62 +136,112 @@ name|String
 name|master
 parameter_list|)
 block|{
-name|StringTokenizer
-name|tokenizer
+name|String
+name|regex
 init|=
-operator|new
-name|StringTokenizer
+literal|"\'([^\']*)\'|\"([^\"]*)\"|(\\S+)"
+decl_stmt|;
+name|Matcher
+name|matcher
+init|=
+name|Pattern
+operator|.
+name|compile
+argument_list|(
+name|regex
+argument_list|)
+operator|.
+name|matcher
 argument_list|(
 name|cmd
-argument_list|,
-literal|" "
 argument_list|)
 decl_stmt|;
+name|ArrayList
+argument_list|<
 name|String
-index|[]
+argument_list|>
 name|args
 init|=
 operator|new
+name|ArrayList
+argument_list|<
 name|String
-index|[
-name|tokenizer
-operator|.
-name|countTokens
+argument_list|>
 argument_list|()
-index|]
 decl_stmt|;
-name|int
-name|i
+name|String
+name|arg
 init|=
-literal|0
+literal|null
 decl_stmt|;
 while|while
 condition|(
-name|tokenizer
+name|matcher
 operator|.
-name|hasMoreTokens
+name|find
 argument_list|()
 condition|)
 block|{
-name|args
-index|[
-name|i
-index|]
-operator|=
-name|tokenizer
+if|if
+condition|(
+name|matcher
 operator|.
-name|nextToken
-argument_list|()
-expr_stmt|;
-name|args
-index|[
-name|i
-index|]
+name|group
+argument_list|(
+literal|1
+argument_list|)
+operator|!=
+literal|null
+condition|)
+block|{
+name|arg
 operator|=
-name|args
-index|[
-name|i
-index|]
+name|matcher
+operator|.
+name|group
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|matcher
+operator|.
+name|group
+argument_list|(
+literal|2
+argument_list|)
+operator|!=
+literal|null
+condition|)
+block|{
+name|arg
+operator|=
+name|matcher
+operator|.
+name|group
+argument_list|(
+literal|2
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|arg
+operator|=
+name|matcher
+operator|.
+name|group
+argument_list|(
+literal|3
+argument_list|)
+expr_stmt|;
+block|}
+name|arg
+operator|=
+name|arg
 operator|.
 name|replaceAll
 argument_list|(
@@ -166,15 +250,9 @@ argument_list|,
 name|master
 argument_list|)
 expr_stmt|;
-name|args
-index|[
-name|i
-index|]
+name|arg
 operator|=
-name|args
-index|[
-name|i
-index|]
+name|arg
 operator|.
 name|replaceAll
 argument_list|(
@@ -202,15 +280,9 @@ literal|'+'
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|args
-index|[
-name|i
-index|]
+name|arg
 operator|=
-name|args
-index|[
-name|i
-index|]
+name|arg
 operator|.
 name|replaceAll
 argument_list|(
@@ -224,12 +296,25 @@ literal|"user.name"
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|i
-operator|++
+name|args
+operator|.
+name|add
+argument_list|(
+name|arg
+argument_list|)
 expr_stmt|;
 block|}
 return|return
 name|args
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|String
+index|[
+literal|0
+index|]
+argument_list|)
 return|;
 block|}
 DECL|method|executeCommand (final String cmd)
